added add plant
