# src/controllers/plant.ts
@@ -33,4 +33,32 @@ const getPlantById = async (
   }
 };
 
-export default { getAllPlants, getPlantById };
+const addPlant = async (req: Request, res: Response, next: NextFunction) => {
+  try {
+    const reqBody: IPlant = {
+      scientificName: req.body.scientificName,
+      commonName: req.body.commonName,
+      category: req.body.category,
+      imgUrl: req.body.imgUrl,
+      stockQty: req.body.stockQty,
+      orderQty: req.body.orderQty,
+      wasteQty: req.body.wasteQty,
+      price: req.body.price,
+    };
+
+    const newPlant = new PlantModel(reqBody);
+
+    const result = await newPlant.save();
+    if (result === newPlant) {
+      res.status(200).send({
+        message: `Plant with name ${reqBody.commonName} added with ID: ${result.id}`,
+      });
+    } else {
+      res.status(404).send({ message: `Plant not added` });
+    }
+  } catch (error) {
+    console.log(error);
+  }
+};
+
+export default { getAllPlants, getPlantById, addPlant };
